--- a/DataServices/DataServices.csproj
+++ b/DataServices/DataServices.csproj
@@ -173,11 +173,18 @@
     <Compile Include="Repositories\AssinanteRepository.cs" />
     <Compile Include="Repositories\BancoRepository.cs" />
     <Compile Include="Repositories\CategoriaAgendaRepository.cs" />
+    <Compile Include="Repositories\CategoriaClienteRepository.cs" />
     <Compile Include="Repositories\CategoriaFornecedorRepository.cs" />
     <Compile Include="Repositories\CategoriaNotificacaoRepository.cs" />
     <Compile Include="Repositories\CategoriaTelefoneRepository.cs" />
     <Compile Include="Repositories\CategoriaUsuarioRepository.cs" />
     <Compile Include="Repositories\CentroCustoRepository.cs" />
+    <Compile Include="Repositories\ClienteAnexoRepository.cs" />
+    <Compile Include="Repositories\ClienteCnpjRepository.cs" />
+    <Compile Include="Repositories\ClienteContatoRepository.cs" />
+    <Compile Include="Repositories\ClienteReferenciaRepository.cs" />
+    <Compile Include="Repositories\ClienteRepository.cs" />
+    <Compile Include="Repositories\ClienteTagRepository.cs" />
     <Compile Include="Repositories\ConfiguracaoRepository.cs" />
     <Compile Include="Repositories\ContaBancariaContatoRepository.cs" />
     <Compile Include="Repositories\ContaBancariaLancamentoRepository.cs" />
