--- a/SMS_Presentation/SMS_Presentation.csproj
+++ b/SMS_Presentation/SMS_Presentation.csproj
@@ -308,6 +308,7 @@
     <Compile Include="Controllers\BancoController.cs" />
     <Compile Include="Controllers\BaseAdminController.cs" />
     <Compile Include="Controllers\CentroCustoController.cs" />
+    <Compile Include="Controllers\ClienteController.cs" />
     <Compile Include="Controllers\ControleAcessoController.cs" />
     <Compile Include="Controllers\FilialController.cs" />
     <Compile Include="Controllers\FornecedorController.cs" />
@@ -334,6 +335,10 @@
     <Compile Include="ViewModels\BancoViewModel.cs" />
     <Compile Include="ViewModels\CategoriaAgendaViewModel.cs" />
     <Compile Include="ViewModels\CentroCustoViewModel.cs" />
+    <Compile Include="ViewModels\ClienteContatoViewModel.cs" />
+    <Compile Include="ViewModels\ClienteReferenciaViewModel.cs" />
+    <Compile Include="ViewModels\ClienteTagViewModel.cs" />
+    <Compile Include="ViewModels\ClienteViewModel.cs" />
     <Compile Include="ViewModels\ConfiguracaoViewModel.cs" />
     <Compile Include="ViewModels\ContaBancariaContatoViewModel.cs" />
     <Compile Include="ViewModels\ContaBancariaLancamentoViewModel.cs" />
@@ -343,6 +348,7 @@
     <Compile Include="ViewModels\GrupoViewModel.cs" />
     <Compile Include="ViewModels\FilialViewModel.cs" />
     <Compile Include="ViewModels\LogViewModel.cs" />
+    <Compile Include="ViewModels\FornecedorComentarioViewModel.cs" />
     <Compile Include="ViewModels\NoticiaComentarioViewModel.cs" />
     <Compile Include="ViewModels\NoticiaViewModel.cs" />
     <Compile Include="ViewModels\NotificacaoAnexoViewModel.cs" />
@@ -3001,11 +3007,25 @@
     <Content Include="Views\Fornecedor\IncluirContatoFornecedor.cshtml" />
     <Content Include="Views\Fornecedor\VerFornecedorInativos.cshtml" />
     <Content Include="Views\Fornecedor\IncluirComentarioFornecedor.cshtml" />
+    <Content Include="Views\Cliente\MontarTelaCliente.cshtml" />
+    <Content Include="Views\Cliente\IncluirCliente.cshtml" />
+    <Content Include="Views\Cliente\EditarCliente.cshtml" />
+    <Content Include="Views\Cliente\ExcluirCliente.cshtml" />
+    <Content Include="Views\Cliente\ReativarCliente.cshtml" />
+    <Content Include="Views\Cliente\VerCardsCliente.cshtml" />
+    <Content Include="Views\Cliente\VerAnexoCliente.cshtml" />
+    <Content Include="Views\Cliente\EditarContato.cshtml" />
+    <Content Include="Views\Cliente\IncluirContato.cshtml" />
+    <Content Include="Views\Cliente\EditarReferencia.cshtml" />
+    <Content Include="Views\Cliente\IncluirReferencia.cshtml" />
+    <Content Include="Views\Cliente\IncluirTag.cshtml" />
+    <Content Include="Views\Cliente\VerClientesInativos.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Imagens\1\Agenda\" />
     <Folder Include="Imagens\1\Assinante\1\Anexos\" />
+    <Folder Include="Imagens\1\Clientes\" />
     <Folder Include="Imagens\1\Equipamento\" />
     <Folder Include="Imagens\1\Fornecedores\" />
     <Folder Include="Imagens\1\Noticias\" />
